--- a/client/src/components/Insert/Insert.css
+++ b/client/src/components/Insert/Insert.css
@@ -1,6 +1,6 @@
 /* Insert.css */
 /* Insert.css */
-.insert-container {
+.ifp-insert-container {
   /* background-color: rgba(210, 214, 216, 0.8); */
   padding: 60px;
   border-radius: 10px;
@@ -23,7 +23,8 @@
     font-weight: bold;
   }
   
-  .input-field {
+  .ifp-input-field {
+    margin-top: 10px;
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #161313;
@@ -34,7 +35,7 @@
   .add-button {
     margin-top: 10px;
     padding: 8px 12px;
-    background-color: #3abd41;
+    background-color: #2272e2;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -56,7 +57,7 @@
   }
   
   .submit-button:hover {
-    background-color: #17c8eb;
+    background-color: #2c62f8;
   }
   
 
